--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "jquery-attrs",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Select attributes from jquery collections.",
   "main": "jquery.attrs.js",
   "scripts": {
+    "prepublish": "gulp minify",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -13,7 +14,9 @@
   "keywords": [
     "jquery",
     "plugin",
-    "layout"
+    "attributes",
+    "attrs",
+    "DOM"
   ],
   "author": "Julian Fleischer",
   "license": "MIT",
@@ -22,13 +25,11 @@
   },
   "homepage": "https://github.com/scravy/jquery-attrs",
   "devDependencies": {
+    "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-esmangle": "^1.1.1",
     "gulp-jshint": "^1.9.4",
     "gulp-nodeunit": "0.0.5",
     "gulp-rename": "^1.2.0"
-  },
-  "dependencies": {
-    "del": "^1.1.1"
   }
 }
